@@ -19,6 +19,7 @@ lib/HTML/Tree/Scanning.pod
 lib/HTML/TreeBuilder.pm
 t/00-all_prereqs.t
 t/00system.t
+t/Util.pm
 t/assubs.t
 t/attributes.t
 t/body.t
@@ -37,6 +38,8 @@ t/parse.t
 t/parsefile.t
 t/refloop.t
 t/sample.txt
+t/sample.xhtml
+t/self-closed.t
 t/split.t
 t/subclass.t
 t/tag-rendering.t
