@@ -1,0 +1,30 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+  "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+  <meta http-equiv="Content-Type"
+        content="application/xhtml+xml; charset=UTF-8" />
+  <title>Test Document</title>
+</head>
+<body>
+
+<h1>Test Document</h1>
+
+<hr/>
+
+<p id="p1"><a id="a1"/>This <a id="a1-1"/>is paragraph <a id="a1-2" />1.</p>
+
+<p id="p2"><a id="a2" />This is paragraph 2.</p>
+
+<p id="p3">
+<a id="a3" href="../">
+<span>This is paragraph 3.</span>
+</a>
+</p>
+
+<p id="p4"><a id="a4"/>This is paragraph 4<br/>
+on two lines.</p>
+
+</body>
+</html>
